updated changes in DuplicateElements